Fixed Overflow on mobile view of industry page

--- a/css/industries.css
+++ b/css/industries.css
@@ -85,6 +85,7 @@ a {
 }
 
 .main-section {
+    position:relative;
     padding: 9rem 1.5rem 8rem 1.5rem;
 }
 
@@ -102,6 +103,7 @@ a {
     padding: 1.3rem 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     min-height: 60px;
+    max-width:100vw;
     box-sizing: border-box;
 }
 
@@ -109,7 +111,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 100%;
+    max-width: 100vw;
     height: 100%;
     min-height: 44px;
 }
@@ -127,6 +129,7 @@ a {
     flex: 1;
     justify-content: center;
     margin: 0 clamp(0.3rem, 2vw, 1rem);
+    
 }
 
 .header-btn {
@@ -1198,6 +1201,8 @@ hr {
     .main-section {
         padding: 10px;
         padding-top: 100px;
+        width:fit-content;
+        max-width:100%;
     }
 
     .Hospitality {
@@ -1265,10 +1270,11 @@ hr {
     }
 
     .FineDining h1::before {
-        top:unset;
-        left:150;
-        transform:scaleX(-1)translateY(940px);
+        top: unset;
+        left: 150;
+        transform: scaleX(-1)translateY(940px);
     }
+
     .FineDining-Content {
         width: 100%;
         display: contents;
@@ -1301,7 +1307,7 @@ hr {
     }
 
     .FineDining-Content ul li {
-        width:84vw;
+        width: 84vw;
         font-size: 24px;
         order: 4;
     }
@@ -1322,8 +1328,8 @@ hr {
     }
 
     .Pubs-Restaurants-CasualDining h1::before {
-        top:unset;
-        transform:translateY(600px);
+        top: unset;
+        transform: translateY(600px);
     }
 
     .PRCD-Content {
@@ -1345,7 +1351,7 @@ hr {
     }
 
     .PRCD-Content ul li {
-        width:84vw;
+        width: 84vw;
         font-size: 24px;
         order: 4;
     }
@@ -1362,8 +1368,8 @@ hr {
     }
 
     .ECH h1::before {
-        top:unset;
-        transform:TranslateY(1230px)TranslateX(-60px);
+        top: unset;
+        transform: TranslateY(1230px)TranslateX(-60px);
         width: 400px;
         opacity: 0.2;
     }
@@ -1389,7 +1395,7 @@ hr {
     }
 
     .ECH-Content ul li {
-        width:84vw;
+        width: 84vw;
         font-size: 24px;
         order: 4;
     }
@@ -1401,7 +1407,7 @@ hr {
     }
 
     .ICC h1 {
-        width:100%;
+        width: 100%;
         font-size: 40px;
         order: 0;
     }
@@ -1430,13 +1436,13 @@ hr {
     }
 
     .ICC-Content ul li {
-        width:84vw;
+        width: 84vw;
         font-size: 24px;
         order: 4;
     }
 
     .TSH {
-        display:contents;
+        display: contents;
         width: 90vw;
     }
 
@@ -1451,12 +1457,17 @@ hr {
         background-size: contain;
         pointer-events: none;
         z-index: 11;
-        left: 180px;
+
+        left: 300px;
         transform: scaleX(-1);
-        width: 400px;
-        height: 400px;
+        width: 45vw;
+        height:45vh;
+        max-width:45vw;
+        max-height:45vh;
         opacity: 0.2;
         top: 7280px;
+        overflow-x:hidden;
+        overflow-y:hidden;
     }
 
     .TSH ul {
@@ -1464,9 +1475,9 @@ hr {
     }
 
     .TSH ul li {
-        width:84vw;
+        width: 84vw;
         font-size: 24px;
-        margin-bottom:24px;
+        margin-bottom: 24px;
     }
 
     .TSH-LIST-2 {
@@ -1492,15 +1503,15 @@ hr {
         pointer-events: none;
         z-index: 12;
         left: 0px;
-        width: 550px;
-        height:550px;
+        width: 660px;
+        height:660px;
         transform: scaleX(1);
-        transform:translateY(900px);
+        transform: translateY(900px);
         opacity: 0.1;
     }
 
     .why-flok-content {
-        width:100%;
+        width: 100%;
         display: contents;
     }
 
@@ -1514,13 +1525,13 @@ hr {
     }
 
     .why-flok-content ul {
-        width:100%;
+        width: 100%;
         order: 3;
         text-align: left;
     }
 
     .why-flok-content ul li {
-        width:84vw;
+        width: 84vw;
         font-size: 24px;
         order: 4;
     }
